[package]
name = "selenite-lamp"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
serialport = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
termios = "0.3.3"
