[package]
name = "selenite-lamp"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
version = "0.2.1"
edition = "2018"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.22", features = ["derive", "env"] }
clap_complete = "3.2.5"
serialport = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
termios = "0.3.3"
anyhow = "1.0.65"
notify = "5.0.0"
notify-debouncer-mini = "0.2.1"
